# jendock-pipeline

./: .gitignore  Dockerfile  Jenkinsfile  README.md  WORKSPACE  main.js  package.json
documentation/: release_notes.txt  table_of_contents.txt
scripts/: compile.sh  create_docker_image.sh  pull_docker_image.sh  push_docker_image.sh  run_tests.sh
src/: BUILD.bazel  hello_world.cpp  main.cpp
src/include/: hello_world.h
src/test/: hello_world_test.cpp
